Fix crash when dragging an item beyond the last position.

In the thumbnail view, a crash/assertion could be triggered by dragging
an image beyond the last position of the thumbnail view.
Instead of requiring the caller to provide a non-null FileName to
ThumbnailModel::updateCell(), this method now ignores non-null
FileNames.

BUG: 418251