ThumbnailView/ThumbnailModel.cpp
@@ -1,4 +1,4 @@
-/* Copyright (C) 2003-2019 The KPhotoAlbum Development Team
+/* Copyright (C) 2003-2020 The KPhotoAlbum Development Team
 
    This program is free software; you can redistribute it and/or
    modify it under the terms of the GNU General Public
@@ -405,6 +405,8 @@ void ThumbnailView::ThumbnailModel::updateCell(const QModelIndex &index)
 
 void ThumbnailView::ThumbnailModel::updateCell(const DB::FileName &fileName)
 {
+    if (fileName.isNull())
+        return;
     updateCell(indexOf(fileName));
 }
 
